--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-myconnection": "^1.0.4",
     "express-validator": "^6.14.2",
     "file-system": "^2.2.2",
     "generate-pincode": "^6.0.0",
